kubernetes/apps/docker-mailserver/mta-sts/base/nginx-mta-sts.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nginx-mta-sts
    app.kubernetes.io/name: nginx-mta-sts
  name: nginx-mta-sts
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: nginx-mta-sts
      app.kubernetes.io/name: nginx-mta-sts
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nginx-mta-sts
        app.kubernetes.io/name: nginx-mta-sts
      annotations:
        instrumentation.opentelemetry.io/inject-nginx: "opentelemetry/cluster-observability"
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 102
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: nginx-mta-sts
                    app.kubernetes.io/name: nginx-mta-sts
              weight: 100
      containers:
        - name: nginx-mta-sts
          image: nginxinc/nginx-unprivileged:1.31.3-alpine@sha256:59ccf0943b0b8e8d9e6ea9039a39555730f544701a655c596f7df7d096c593f5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/share/nginx/html/.well-known
              name: mta-sts-file
            - mountPath: /tmp
              name: tmp
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /.well-known/mta-sts.txt
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /.well-known/mta-sts.txt
              port: http
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          securityContext:
            capabilities:
              drop:
                - NET_RAW
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 1m
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: mta-sts-file
          configMap:
            name: mta-sts-file
        - emptyDir: {}
          name: tmp
