kubernetes/apps/docker-mailserver/mta-sts/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mta-sts-http-route
  labels:
    app.kubernetes.io/instance: docker-mailserver
    app.kubernetes.io/name: docker-mailserver
spec:
  parentRefs:
    - name: kube-gateway
  hostnames:
    - mta-sts.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: nginx-mta-sts-svc
          port: 80
